<resources>
    <string name="app_name">HKS Vertreter</string>
    <string name="navigation_drawer_open">Navigationsleiste öffnen</string>
    <string name="navigation_drawer_close">Navigationsleiste schließen</string>
    <string name="nav_header_title">HKS Vertreter</string>
    <string name="nav_header_subtitle">Heinrich-Kleyer-Schule</string>
    <string name="nav_header_desc">Navigationsleiste</string>
    <string name="action_settings">Einstellungen</string>
    <string name="menu_home">Vertretungsplan</string>
    <string name="menu_gallery">Kalender</string>
    <string name="menu_slideshow">Hausaufgaben</string>
    <string name="menu_klausuren">Klausuren</string>
    <string name="menu_noten">Noten</string>
    <string name="menu_moodle">Moodle</string>
    <string name="january">Januar</string>
    <string name="february">Februar</string>
    <string name="march">März</string>
    <string name="april">April</string>
    <string name="may">Mai</string>
    <string name="june">Juni</string>
    <string name="july">Juli</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">Oktober</string>
    <string name="november">November</string>
    <string name="december">Dezember</string>
    <string name="january_short">Jan</string>
    <string name="february_short">Feb</string>
    <string name="march_short">Mär</string>
    <string name="april_short">Apr</string>
    <string name="may_short">Mai</string>
    <string name="june_short">Jun</string>
    <string name="july_short">Jul</string>
    <string name="august_short">Aug</string>
    <string name="september_short">Sep</string>
    <string name="october_short">Okt</string>
    <string name="november_short">Nov</string>
    <string name="december_short">Dez</string>
    <string name="monday">Montag</string>
    <string name="tuesday">Dienstag</string>
    <string name="wednesday">Mittwoch</string>
    <string name="thursday">Donnerstag</string>
    <string name="friday">Freitag</string>
    <string name="saturday">Samstag</string>
    <string name="sunday">Sonntag</string>
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Di</string>
    <string name="wednesday_short">Mi</string>
    <string name="thursday_short">Do</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">So</string>
    <string name="unknown">Unbekannt</string>
    <string name="language_settings">Spracheinstellungen</string>
    <string name="auto_detect_language">Sprache automatisch erkennen</string>
    <string name="select_language">Sprache auswählen</string>
    <string name="language_description">Wähle die Sprache für die App-Oberfläche</string>
    <string name="german">Deutsch</string>
    <string name="english">Englisch</string>
    <string name="current_language_german">Aktuelle Sprache: Deutsch</string>
    <string name="current_language_english">Aktuelle Sprache: Englisch</string>
    <string name="language_selection">Sprachauswahl</string>
    <string name="cancel">Abbrechen</string>
    <string name="restart_required">Neustart erforderlich</string>
    <string name="restart_required_message">Die Sprachänderung wird nach einem Neustart der App wirksam.</string>
    <string name="restart_now">Jetzt neustarten</string>
    <string name="restart_later">Später</string>
    <string name="act_set_general_settings">Allgemeine Einstellungen</string>
    <string name="act_set_current_selection">Aktuelle Auswahl</string>
    <string name="act_set_current_selection_details">Bildungsgang: BG\nKlasse: 11BG1</string>
    <string name="act_set_change_hint">Zum Ändern bitte alle Daten weiter unten zurücksetzen</string>
    <string name="act_set_timetable_management">Stundenplan Management</string>
    <string name="act_set_timetable_description">Scanne deinen Stundenplan als PDF ein, um die App zu personalisieren</string>
    <string name="act_set_scan_timetable">Stundenplan einscannen</string>
    <string name="act_set_edit_timetable">Stundenplan bearbeiten</string>
    <string name="act_set_export_timetable">Stundenplan exportieren</string>
    <string name="act_set_import_timetable">Stundenplan importieren</string>
    <string name="act_set_startup_page">Startseite</string>
    <string name="act_set_startup_description">Wähle die Seite, die beim App-Start angezeigt werden soll</string>
    <string name="act_set_startup_current">Startseite: Vertretungsplan</string>
    <string name="act_set_substitution_plan">Vertretungsplan</string>
    <string name="act_set_filter_subjects">Nur meine Fächer anzeigen</string>
    <string name="act_set_filter_subjects_desc">Zeigt nur Vertretungen für deine gescannten oder importierten Fächer an</string>
    <string name="act_set_filter_available_hint">Nur verfügbar, wenn ein Stundenplan erfasst wurde</string>
    <string name="act_set_filter_button_position">Filter-Aufheber Position</string>
    <string name="act_set_filter_button_desc">Position des temporären Filter-Aufhebungs-Buttons im Header</string>
    <string name="act_set_filter_position_hint">Aus: Links (Standard) | Ein: Rechts</string>
    <string name="act_set_auto_updates">Automatische Updates</string>
    <string name="act_set_auto_updates_desc">Vertretungsplan automatisch im Hintergrund aktualisieren</string>
    <string name="act_set_enable_auto_updates">Automatische Updates aktivieren</string>
    <string name="act_set_update_time">Update-Zeit: 06:00</string>
    <string name="act_set_show_update_notifications">Update-Benachrichtigungen anzeigen</string>
    <string name="act_set_change_notifications">Änderungs-Benachrichtigungen</string>
    <string name="act_set_information_notification">Informationen zu Benachrichtigungen</string>
    <string name="act_set_change_notifications_desc">Bei Änderungen im Vertretungsplan benachrichtigen</string>
    <string name="act_set_enable_change_notifications">Änderungs-Benachrichtigungen aktivieren</string>
    <string name="act_set_check_interval">Prüfintervall: Alle 15 Minuten</string>
    <string name="act_set_notify_for_changes">Benachrichtigen bei Änderungen von:</string>
    <string name="act_set_network_settings">Netzwerk-Einstellungen</string>
    <string name="act_set_wifi_only">Nur über WLAN automatisch aktualisieren</string>
    <string name="act_set_wifi_only_desc">Spart mobile Daten</string>
    <string name="act_set_update_cooldown">1-Minute Abkühlzeit beim Aktualisieren</string>
    <string name="act_set_update_cooldown_desc">Verringert Internetverbrauch</string>
    <string name="act_set_colorblind_settings">Farbschwächen-Einstellungen</string>
    <string name="act_set_colorblind_desc">Passt wichtige Farben basierend auf der ausgewählten Farbschwäche an</string>
    <string name="act_set_calendar">Kalender</string>
    <string name="act_set_real_time_display">Echtzeit-Anzeige</string>
    <string name="act_set_real_time_desc">Zeigt und aktualisiert in Echtzeit an, welche Stunde gerade läuft und welches Fach du hast</string>
    <string name="act_set_enable_real_time">Echtzeit-Kalender aktivieren</string>
    <string name="act_set_real_time_update">Aktualisiert alle 60 Sekunden</string>
    <string name="act_set_include_weekend">Wochenende miteinbeziehen</string>
    <string name="act_set_include_weekend_desc">Fügt das Wochenende mit in die Tages-Übersicht ein</string>
    <string name="act_set_homework">Hausaufgaben</string>
    <string name="act_set_due_date_reminders">Fälligkeits-Erinnerungen</string>
    <string name="act_set_due_date_desc">Erinnert dich vor der Fälligkeit deiner Hausaufgaben</string>
    <string name="act_set_enable_due_date_reminders">Fälligkeits-Erinnerungen aktivieren</string>
    <string name="act_set_reminder_hours">Erinnerung: 16 Stunden vorher</string>
    <string name="act_set_daily_reminder">Tägliche Hausaufgaben-Erinnerung</string>
    <string name="act_set_daily_reminder_desc">Erinnert dich täglich an offene Hausaufgaben</string>
    <string name="act_set_enable_daily_reminder">Tägliche Erinnerung aktivieren</string>
    <string name="act_set_reminder_time">Erinnerungszeit: 19:00</string>
    <string name="act_set_auto_delete">Automatisches Löschen</string>
    <string name="act_set_auto_delete_desc">Erledigte Hausaufgaben automatisch löschen</string>
    <string name="act_set_auto_delete_hint">Erledigte Hausaufgaben werden nach 3 Tagen automatisch gelöscht</string>
    <string name="act_set_exams">Klausuren</string>
    <string name="dia_add_sub_manual_enter_info">Gebe die Fach-Informationen ein:</string>
    <string name="dia_add_sub_manual_subject_hint">Fach (erforderlich)</string>
    <string name="dia_add_sub_manual_teacher_hint">Lehrer (optional)</string>
    <string name="dia_add_sub_manual_room_hint">Raum (optional)</string>
    <string name="dia_add_sub_manual_alt_rooms">Alternative Räume</string>
    <string name="dia_add_sub_manual_alt_rooms_max">Alternative Räume (max. 2):</string>
    <string name="dia_add_sub_manual_add_room_btn">+ Raum hinzufügen</string>
    <string name="act_set_select_new_class_title">Neue Klasse auswählen</string>
    <string name="act_set_select_new_class_desc">Wählen Sie Ihre neue Klasse aus. Ihre Notendaten können bei Bedarf übertragen werden.</string>
    <string name="act_set_preserve_grades_data">Notendaten beibehalten</string>
    <string name="act_set_continue">Fortfahren</string>
    <string name="settings_reset_moodle_preferences_title">Moodle-Abruf-Einstellungen zurücksetzen</string>
    <string name="settings_reset_moodle_preferences_desc">Wähle aus, welche Moodle-Abruf-Einstellungen du zurücksetzen möchtest. Du wirst beim nächsten Mal erneut gefragt.</string>
    <string name="settings_reset_exam_fetch_preference">Klausurplan-Abruf-Einstellung</string>
    <string name="settings_reset_timetable_fetch_preference">Stundenplan-Abruf-Einstellung</string>
    <string name="settings_reset_saved_program_name">Gespeicherter Programm-Kursname</string>
    <string name="settings_reset_saved_timetable_entry">Gespeicherter Stundenplaneintrags-Name</string>
    <string name="settings_clear_selected">Ausgewählte löschen</string>
    <string name="gall_notes">Notizen:</string>
    <string name="gall_special_events">Besondere Ereignisse:</string>
    <string name="gall_add_event">+ Ereignis hinzufügen</string>
    <string name="gall_notes_hint">Persönliche Notizen für diesen Tag…</string>
    <string name="moodle_clear_search">Suche löschen</string>
    <string name="moodle_username_hint">Benutzername</string>
    <string name="moodle_password_hint">Passwort</string>
    <string name="moodle_save_credentials">Anmeldedaten sicher auf diesem Gerät speichern</string>
    <string name="moodle_dont_show_again">Diesen Dialog nicht mehr anzeigen</string>
    <string name="moodle_continue">Weiter</string>
    <string name="moodle_cancel">Abbrechen</string>
    <string name="moodle_login_failed">Anmeldung fehlgeschlagen. Bitte überprüfen Sie Ihren Benutzernamen und Ihr Passwort.</string>
    <string name="moodle_fetching_title">Abrufen von Moodle</string>
    <string name="moodle_waiting_for_login">Warte auf Login…</string>
    <string name="moodle_enter_exam_program_name">Bildungsgang-Name</string>
    <string name="moodle_save_program_name">Diesen Programmnamen speichern</string>
    <string name="moodle_login_info">Bitte gebe deine Moodle-Anmeldedaten ein</string>
    <string name="moodle_toggle_password_visibility">Passwort anzeigen/verbergen</string>
    <string name="text_viewer_search_hint">Suchtext eingeben</string>
    <string name="text_viewer_no_results">Keine Ergebnisse</string>
    <string name="text_viewer_previous_result">Vorheriges</string>
    <string name="text_viewer_next_result">Nächstes</string>
    <string name="settings_reset_main_course_url">Gespeicherte Hauptkurs-URL löschen</string>
</resources>