<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_klausuren"
            android:icon="@drawable/ic_menu_klausuren"
            android:title="@string/menu_klausuren" />
        <item
            android:id="@+id/nav_noten"
            android:icon="@drawable/ic_star"
            android:title="@string/menu_noten" />
        <item
            android:id="@+id/nav_moodle"
            android:icon="@drawable/ic_moodle"
            android:title="@string/menu_moodle" />
    </group>
</menu>