<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.thecooker.vertretungsplaner.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.thecooker.vertretungsplaner.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.thecooker.vertretungsplaner.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_klausuren"
        android:name="com.thecooker.vertretungsplaner.ui.exams.ExamFragment"
        android:label="@string/menu_klausuren"
        tools:layout="@layout/fragment_exam" />

    <fragment
        android:id="@+id/nav_noten"
        android:name="com.thecooker.vertretungsplaner.ui.grades.GradesFragment"
        android:label="@string/menu_noten"
        tools:layout="@layout/fragment_grades" />

    <fragment
        android:id="@+id/nav_moodle"
        android:name="com.thecooker.vertretungsplaner.ui.moodle.MoodleFragment"
        android:label="@string/menu_moodle"
        tools:layout="@layout/fragment_moodle" />
</navigation>